Update Swagger configuration to support both HTTP and HTTPS schemes and OpenAPI 3.1.*
Add cors support and func for dynamic env
