# docs/swagger.json
@@ -1,6 +1,7 @@
 {
     "schemes": [
-        "https"
+        "https",
+        "http"
     ],
     "swagger": "2.0",
     "info": {
@@ -18,7 +19,6 @@
         },
         "version": "1.0"
     },
-    "host": "atlas.doroad.io",
     "basePath": "/v1",
     "paths": {
         "/alpha": {
